# chinese-util-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: install.yml  macos.yml  release.yml  style.yml  ubuntu.yml  windows-x64.yml  windows-x86.yml
data/: pinyinData.json
include/: dict.h  json.h  money.h  number.h  pinyin.h  pinyin_split.h  st.h  util.h
include/php/: php_chinese_util.h  php_dict.h  php_money.h  php_number.h  php_pinyin.h  php_pinyin_split.h  php_st.h
phptest/: .phpunit.result.cache  bootstrap.php  composer.json  phpunit.xml
phptest/Tests/: PinyinTest.php  SwoolePinyinTest.php
source/: dict.cpp  money.cpp  number.cpp  pinyin.cpp  pinyin_split.cpp  st.cpp
source/php/: php_chinese_util.cpp  php_dict.cpp  php_money.cpp  php_number.cpp  php_pinyin.cpp  php_pinyin_split.cpp  php_st.cpp
test/: CMakeLists.txt
test/include/: test_util.h
test/source/: main.cpp  money.cpp  number.cpp  pinyin.cpp  pinyin_split.cpp  st.cpp
